lesson1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rs-otus-hw1-service
spec:
  selector:
    app: healthcheck-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
