lesson1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rs-otus-hw1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/evgenaleksakuznetsov(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rs-otus-hw1-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rs-otus-hw1-service
                port:
                  number: 80
